    - Sign GUI now appears on the left so you can see the sign you are currently placing
    - Updated mod dependencies to remove deprecated third party mods
  Bugfixes:
    - Fixed an issue where Painted refined concrete had an incorrect walking speed modifier
    - Fixed an issue where multiplayer games wouldn't start correctly with a completely new save
---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 02. 03. 2019
  Added:
    - High resolution gfx for Wooden and Steel signs
    - High resolution gfx for Traffic bollard
    - 7 new signal colours - Maroon, Brown, Olive, Emerald, Teal, Navy and Violet
    - 10 new signal icons - Light, Gun, Mine, Oil, Tank, Train, Wall, Siren, Warning shield and Warning triangle
  Changed:
    - Reduced mining time of signs
    - Updated technology icons
    - Additional compression of Refined concrete gfx to reduce mod package size
  Bugfixes:
    - Fixed an issue when modded items exist that have an icon_size of less than 32 pixels
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 28. 02. 2019
  Added:
    - Frequently asked questions (see Mod Portal or FAQ.md in the mod package)
  Changed:
    - Updated thumbnail image with 0.17 textures
  Bugfixes:
    - Fixed migration issue on some old saves
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 27. 02. 2019
  Added:
    - Factorio 0.17 support
    - Thumbnail image for mod directory
  Changed:
    - Wooden sign and Wooden wall recipes adjusted to compensate for raw wood changes
    - Waterfill recipe adjusted to remove pickaxe requirement
  Removed:
    - Factorio 0.16 support (use Dectorio v0.8.10 when playing 0.16 saves)
    - Removed Hazard gate as it is now the default base game style